syntax = "proto2";
package TestProto2;

option java_package = "org.bhnte.test";

message Test2 {
    repeated int32 emptyRepeated = 1;
    repeated int32 nonEmptyRepeated = 2;
    map<int32, int32> emptyMap = 3;
    map<int32, int32> nonEmptyMap = 4;
}
