syntax = "proto3";
package TestProto3;

option java_package = "org.bhnte.test";

message Test3 {
    int32 intNotSet = 1;
    int32 intSet = 2;
    repeated int32 emptyRepeated = 3;
    repeated int32 nonEmptyRepeated = 4;
    map<int32, int32> emptyMap = 5;
    map<int32, int32> nonEmptyMap = 6;
}
